--- a/src/currencyExApp/templates/index.html
+++ b/src/currencyExApp/templates/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	{% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
-	<title>Currency Exchange</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/flags.css' %}"/>
+    <title>Currency Exchange</title>
 </head>
 <body>
-	{{q}}
+    <div class="container">
+        <form class="form-inline">
+            <div class="form-group">
+                <label>Convert</label>
+                    <input class="form-control" type="text" name="amt" placeholder="20"/>
+                    <select class="form-control" name="froCurr" id="froCurr">
+                        {% for sym, name in allCurrencies.items %}
+                            <option value="{{sym}}">{{sym}} - {{name.0}}</option>
+                        {% endfor %}
+                    </select>
+                <label>To</label>
+                    <select class="form-control" name="toCurr" id="toCurr">
+                        {% for sym, name in allCurrencies.items %}
+                            <option value="{{sym}}">{{sym}} - {{name.0}}</option>
+                        {% endfor %}
+                    </select>
+                <button type="submit" class="btn btn-default">Calculate</button>
+            </div>
+        </form>
+        {% if exRates %}
+        <h2>{{getValues.amt}} {{getValues.froCurr}} = {{exRates.value}} {{getValues.toCurr}}</h2>           
+        <table class="table table-striped">         
+            <tbody>
+                <tr>
+                    <td class="col-md-1">&nbsp;</td>                        
+                    {% for sym in commonCurrencies %}
+                    <td class="col-md-1">
+                        {{allCurrencies|get_currency_name:sym}} 
+                        <span class="flag flag-{{allCurrencies|get_flag:sym}}" alt="{{allCurrencies|get_currency_name:sym}}"></span>
+                    </td>                   
+                    {% endfor %}
+                </tr>
+                <tr>
+                    <td class="col-md-1">
+                        1 {{allCurrencies|get_currency_name:getValues.froCurr}} 
+                        <span class="flag flag-{{allCurrencies|get_flag:getValues.froCurr}}" alt="{{allCurrencies|get_currency_name:getValues.froCurr}}"></span>
+                    </td>
+                    {% for exRate in exRates.commonConversion %}
+                        <td class="col-md-1">{{exRate}}</td>
+                    {% endfor %}
+                </tr>
+                <tr>
+                    <td>Inverse</td>
+                    {% for exRate in exRates.commonInConversion %}
+                        <td class="col-md-1">{{exRate}}</td>
+                    {% endfor %}
+
+                </tr>
+            </tbody>
+        </table>
+        {% endif %}             
+    </div>  
 <script type="javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 <script type="javascript" src="{% static 'js/jquery-2.1.4.js' %}"></script>
+<script type="javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
