added historic data chart

--- a/src/currencyExApp/templates/home.html
+++ b/src/currencyExApp/templates/home.html
@@ -16,45 +16,52 @@
 <body>    
     <div class="container">
         <form id="currency-ex-form" class="form-inline" method="GET" onsubmit="return validateForm();">
-        <!-- <form id="currency-ex-form" class="form-inline"> -->
-            <div class="form-group" id="amt-form-group">
-                <label for="amt">Convert</label>
-                {% if getValues.amt %}
-                  <input class="form-control" type="text" name="amt" placeholder="20" id="amt" value="{{getValues.amt}}" />
-                {% else %}
-                  <input class="form-control" type="text" name="amt" placeholder="20" id="amt"/>
-                {% endif %}
-            </div>
-            <div class="form-group" id="curr-form-group">
-                <select class="form-control" name="froCurr" id="froCurr">
-                    {% for sym, name in allCurrencies.items %}
-                        {% if sym == getValues.froCurr %}
-                          <option value="{{sym}}" selected>{{sym}} - {{name.0}}</option>
-                        {% else %}
-                          <option value="{{sym}}">{{sym}} - {{name.0}}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-                <a href="#" onclick="currencySwitch();" id="currency-switch">&#8596;</a>
-                <select class="form-control" name="toCurr" id="toCurr">
-                    {% for sym, name in allCurrencies.items %}
-                      {% if sym == getValues.toCurr %}
+          <div class="form-group" id="amt-form-group">
+              <label for="amt">Convert</label>
+              {% if getValues.amt %}
+                <input class="form-control" type="text" name="amt" placeholder="20" id="amt" value="{{getValues.amt}}" />
+              {% else %}
+                <input class="form-control" type="text" name="amt" placeholder="20" id="amt"/>
+              {% endif %}
+          </div>
+          <div class="form-group" id="curr-form-group">
+              <select class="form-control" name="froCurr" id="froCurr">
+                  {% for sym, name in allCurrencies.items %}
+                      {% if sym == getValues.froCurr %}
                         <option value="{{sym}}" selected>{{sym}} - {{name.0}}</option>
                       {% else %}
-                          <option value="{{sym}}">{{sym}} - {{name.0}}</option>
+                        <option value="{{sym}}">{{sym}} - {{name.0}}</option>
                       {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-            <button type="submit" class="btn btn-default">Calculate</button>            
-        </form>     
-        {% if exRates %}           
+                  {% endfor %}
+              </select>
+              <a href="#" onclick="currencySwitch();" id="currency-switch">&#8596;</a>
+              <select class="form-control" name="toCurr" id="toCurr">
+                  {% for sym, name in allCurrencies.items %}
+                    {% if sym == getValues.toCurr %}
+                      <option value="{{sym}}" selected>{{sym}} - {{name.0}}</option>
+                    {% else %}
+                        <option value="{{sym}}">{{sym}} - {{name.0}}</option>
+                    {% endif %}
+                  {% endfor %}
+              </select>
+          </div>
+          <button type="submit" class="btn btn-default">Calculate</button>            
+        </form>
+        {% if exRates %}
+          <h4><small>{{exRates.timestamp}} GMT. Refreshing in <span id="timer-refresh">60</span> seconds...</small></h4>
+          <!-- exchange result -->            
           {% include "result.html" %}
+          <!-- historic graph -->
+          <div id='hresult-graph' style="min-width: 310px"></div>           
+          <script type="text/javascript">
+            var name = "{{getValues.toCurr}}";
+            var hresultGraphTitle = "{{getValues.froCurr}} \u2192 {{getValues.toCurr}}";          
+          </script>
         {% endif %}
     </div>     
 <script type="text/javascript" src="{% static 'js/jquery-2.1.4.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/highstock.js'%}"> </script>
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/highcharts.js'%}"> </script>
 </body>
 </html>
