--- a/src/currencyExApp/templates/result.html
+++ b/src/currencyExApp/templates/result.html
@@ -1,8 +1,6 @@
 <div id="currency-ex-result">    
-    
-    <h4><small>{{exRates.timestamp}} GMT, refreshing in <span id="timer-refresh">60</span> seconds...</small></h4>
     <h2><b>{{getValues.amt}} {{getValues.froCurr}}</b> = {{exRates.value}} {{getValues.toCurr}}</h2>           
-    <table class="table table-striped">         
+    <table id="currency-ex-table" class="table table-striped">         
         <tbody>
             <tr>
                 <td class="col-sm-2">&nbsp;</td>                        
