--- a/src/currencyExApp/templates/result.html
+++ b/src/currencyExApp/templates/result.html
@@ -1,4 +1,5 @@
-<div id="currency-ex-result">    
+<div id="currency-ex-result">
+    <h4><small>{{exRates.timestamp}} GMT. Refreshing in <span id="timer-refresh">60 seconds...</span></small></h4>    
     <h2><b>{{getValues.amt}} {{getValues.froCurr}}</b> = {{exRates.value}} {{getValues.toCurr}}</h2>           
     <table id="currency-ex-table" class="table table-striped">         
         <tbody>
@@ -6,15 +7,15 @@
                 <td class="col-sm-2">&nbsp;</td>                        
                 {% for sym in commonCurrencies %}
                 <td class="col-sm-2">
-                    {{allCurrencies|get_currency_name:sym}} 
-                    <span class="flag flag-{{allCurrencies|get_flag:sym}}" alt="{{allCurrencies|get_currency_name:sym}}"></span>
+                    {{sym|get_currency_name}} 
+                    <span class="flag flag-{{sym|get_flag}}" alt="{{sym|get_currency_name}}"></span>
                 </td>                   
                 {% endfor %}
             </tr>
             <tr>
                 <td class="col-sm-2">
-                    1 {{allCurrencies|get_currency_name:getValues.froCurr}} 
-                    <span class="flag flag-{{allCurrencies|get_flag:getValues.froCurr}}" alt="{{allCurrencies|get_currency_name:getValues.froCurr}}"></span>
+                    1 {{getValues.froCurr|get_currency_name}} 
+                    <span class="flag flag-{{getValues.froCurr|get_flag}}" alt="{{getValues.froCurr|get_currency_name}}"></span>
                 </td>
                 {% for exRate in exRates.commonConversion %}
                     <td class="col-sm-2">{{exRate}}</td>
