template inheritance, and other bug  fixes

--- a/src/currencyExApp/templates/error.html
+++ b/src/currencyExApp/templates/error.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	{% load static %}
-	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
-	<title>Error - Currency Exchange</title>
-</head>
-<body>
-	<div style="padding-top: 10px; text-align: center;">
-		<span><b>Something went wrong!</b> Try again later...</span> 
-		<button onclick="location.reload();">Retry Now</button>
-	</div>
-</body>
-</html>
+{% extends "basic.html" %}
 
-
-
+{% block title %} Error - Currency Exchange {% endblock %}
+{% block content %}
+<div style="padding-top: 10px; text-align: center;">
+	<span><b>Something went wrong!</b> Try again later...</span> 
+	<button onclick="location.reload();">Retry Now</button>
+</div>
+{% endblock %}
