--- a/src/currencyExApp/templates/basic.html
+++ b/src/currencyExApp/templates/basic.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-theme.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/flags.css' %}"/>
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
+    {% block stylesheets %} {% endblock %}
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>    
@@ -14,8 +14,9 @@
 {% endblock %} 
 
 <script type="text/javascript" src="{% static 'js/jquery-2.1.4.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> 
+<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 {% block scripts %}
 {% endblock %}
 </body>
 </html>
+
