--- a/currencyExchange/static/css/main.css
+++ b/currencyExchange/static/css/main.css
@@ -13,7 +13,11 @@ h2{
 	text-decoration: none;
 }
 
+.btn {
+	border: 1px solid rgb(209, 209, 209)
+}
+
 #hresult-graph{
-	height:300px; 
+	height:300px;
 	min-width: 310px;
 }
